--- a/j_socket/package.json
+++ b/j_socket/package.json
@@ -2,5 +2,7 @@
   "name": "realtime-server",
   "version": "0.0.1",
   "description": "my first realtime server",
-  "dependencies": {}
+  "dependencies": {
+    "express": "~4.13.1"
+  }
 }
